# NAOChat

./: README.md
soundProcessing/: CMakeLists.txt  qiproject.xml
soundProcessing/build-nao/: CMakeCache.txt  Makefile  cmake_install.cmake
soundProcessing/build-nao/sdk/share/qi/: path.conf
soundProcessing/include/: process.h
soundProcessing/src/: main.cpp  process.cpp
tactile/: .cproject  .project  CMakeLists.txt  FindMSC.cmake  ffind.cmake  qibuild.manifest
tactile/.qi/: path.conf
tactile/build-nao/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
tactile/build-sys-linux-x86_64/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
tactile/build-sys-linux-x86_64/sdk/share/qi/: path.conf
tactile/src/: spark.cpp  tactile.cpp
